--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-54516992-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3B9RT44LER"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-54516992-1');
+  gtag('config', 'G-3B9RT44LER');
 </script>
 
 	<meta charset="UTF-8">
