--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
 
   gtag('config', 'G-3B9RT44LER');
 </script>
+	  <style>
+    body {
+        background: white }
+    section {
+        background: black;
+        color: white;
+        border-radius: 1em;
+        padding: 1em;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%) }
+  </style>
 
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,7 +33,9 @@
 </head>
 
 <body>
-	Analytics Test
+	<section><img src="./analytics.jpg" alt="analytics">
+		<p>Analytics Test</p>
+	</section>
 </body>
 
 </html>
